# gpt-neanias

./: .gitmodules  setup.cfg  setup.py
npt/: __init__.py  _log.py  _version.py  cli.py  download.py  reduce.py  search.py
npt/datasets/: __init__.py
npt/isis/: __init__.py  _docker.py  _sh.py  calibration.py  format.py  mosaic.py  projection.py
npt/pipelines/: download.py  mosaic.py  processing.py  search.py
npt/search/: __init__.py  ode.py
npt/utils/: bbox.py  download.py  filenames.py  geojson.py  raster.py
snippets/bash/: ctx_data_reduce.sh
snippets/html/: index.html
snippets/python/: ctx_data_reduction.py
tests/: test_pipelines.py  test_search.py
