[metadata]
name = npt
author = Carlos H. Brandt
description = N-Processing Tools
url = https://github.com/chbrandt/npt

keywords =
  geosciences
  mosaic
  isis3
  pds
  geopandas

classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering

license_files =
  LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = npt/_version.py
versionfile_build = npt/_version.py
tag_prefix =
parentdir_prefix = npt-

[options]
python_requires = >= 3.6, <3.9
packages = find:
zip_safe = False
install_requires =
    click >= 7.1.2
    geopandas >= 0.8.1
    requests >= 2.24
    shapely >= 1.7.1
    rasterio >= 1.1.7
    sh >= 1.14
    tqdm >= 4.49
